src/modules/blog/css/stylesblog.css
body {
  font-family: "Poppins", sans-serif;
  background: var(--color-bg);
  font-size: 0.9rem;
  line-height: 1.6;
  color: var(--color-gray-700);
}

:root {
  --color-primary: hsl(281, 67%, 48%);
  --color-white: #ffffff;
  --color-red: #e62645;
  --color-red-two: #e52644;
  --color-gray-100: hsl(220, 20%, 10%, 5%);
  --color-gray-200: hsl(220, 20%, 10%, 10%);
  --color-gray-300: hsl(220, 20%, 10%, 25%);
  --color-gray-500: hsl(220, 20%, 10%, 50%);
  --color-gray-700: #252542;
  --color-gray-900: #0c0c22;
  --color-tercer: #16acbb;
  --color-bg: #e8ecec;

  --transition: all 300ms ease;

  --container-widht-lg: 84%;
  --container-width-md: 92%;
  --form-width: 50%;

  --radius-1: 0.3rem;
  --radius-2: 0.9rem;
  --radius-3: 1rem;
  --radius-4: 2rem;
}

* {
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  box-sizing: border-box;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New";
}

a {
  color: var(--color-gray-700);
  text-decoration: none;
}

ul {
  list-style: none;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: var(--color-gray-900);
  line-height: 1.1;
}

h1 {
  font-size: 2.2rem;
}

h2 {
  font-size: 1.9rem;
}

h3 {
  font-size: 1.3rem;
  line-height: 1.25;
}

h4 {
  font-size: 1.1rem;
}

h5 {
  line-height: 1.4;
}



section {
  margin-top: 6rem;
}

.container {
  width: var(--container-width-lg);
  margin-inline: auto;
}

.btn {
  display: inline-block;
  width: fit-content;
  padding: 0.5rem 1rem;
  border-radius: var(--radius-2);
  background: var(--color-white);
  font-weight: 500;
  cursor: pointer;
  transition: var(--transition);
}

.btn.primary_01 {
  background: var(--color-tercer);
  color: var(--color-white);
}

.btn.category {
  background: var(--color-gray-900);
  color: var(--color-white);
  font-size: 0.75rem;
  font-weight: 400;
}

.btn.sm {
  font-size: 0.8rem;
  padding: 0.3rem 0.7rem;
  font-weight: 400;
  background: var(--color-gray-900);
  color: #ffffff;
}

.btn.danger {
  background: var(--color-red);
  color: var(--color-white);
}

.btn:hover {
  background: var(--color-tercer);
  color: var(--color-white);
}

.center {
  text-align: center;
  padding-top: 5rem;
  margin-inline: center;
  display: block;
  width: 100%;
}

.error-page h2 {
  margin-top: 3rem;
}

/* NAVBAR*/

nav {
  width: 100vw;
  height: 5rem;
  place-items: center;
  background: var(255, 255, 255, 0.5);  
  text-align: center;
  justify-content: center;

}

.nav__container {
  display: flex;
  justify-content: center;
  text-align: center;
  align-items:center;
  height: 100%;
}

.nav__logo {
  width: 3rem;
  display: block;
}

.nav__menu {
  position: flex;
  align-items: center;
  gap: 3rem;
  list-style: none;
  width: 100%;
  display: flex;
  justify-content: center;
  

  
 
}

.nav__toggle-btn {
 display: none;
}



/* FOOTER*/

footer {
  
  margin-top: 6rem;
  padding-top: 6rem;
}

.footer_categories {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1.5rem;
  margin-bottom: 4rem;
}

.footer_categories a {
  background: var(--color-gray-700);
  color: var(--color-white);
  padding: 0.6rem 1.4rem;
  border-radius: var(--radius-2);
  transition: var(--transition);
}

.footer_categories a:hover {
  background: var(--color-white);
  color: var(--color-gray-900);
}

.footer__copyright {
  text-align: center;
  border-top: 2px solid var(--color-gray-700);
  padding: 1rem;
  color: var(--color-white);
  font-weight: 300;
}

/* POSTS */

.posts_container {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 10rem;
  width: 80%;
}

.post {
  background: var(--color-white);
  padding: 1rem;
  border-radius: var(--radius-4);
  padding-bottom: 2rem;
  transition: var(--transition);
  cursor: default;
}

.post:hover {
  box-shadow: 0 1.5rem 2rem rgba(0, 0, 0, 0, 1);
}

.post__thumbnail {
  border-radius: var(--radius-3);
  overflow: hidden;
  height: 16rem;
}

.post__image{
  width: 100%;
}

.post__content {
  margin-top: 1.5rem;
}

.post__content h3 {
  margin: 1rem 0 0.6rem;
}

.post_footer {
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
  margin-top: 2rem;
}

.post_author {
  display: flex;
  gap: 1rem;
  align-items: flex-start;
}

.post_author-avatar {
  width: 10.5rem;
  aspect-ratio: 1/1;
  border-radius: var(--radius-2);
  overflow: hidden;
}

/*POST DETAIL*/

.post-detail {
  width: var(--form-width);
  background: var (var(--color-white));
  margin-inline: auto;
  padding: 2rem 0;
}

.post-detail__header {
  display: flex;
  justify-content: space-between;
  margin-bottom: 1.5rem;
}

.post-detail__buttons {
  display: flex;
  gap: 1rem;
  align-items: center;
}

.post-detail__thumbnail {
  margin: 1rem 0;
  height: fit-content;
  max-height: 30rem;
  overflow: hidden;
}

.post-detail p {
  margin-bottom: 0.7rem;
}

/* Register & form Styles */

.form {
  display: flex;
  flex-direction: column;
  gap: 0.8rem;
}

input,
select,
textarea {
  width: 100%;
  padding: 0.6rem 1rem;
  border-radius: var(--radius-1);
  resize: none;
}

.form_error-message {
  background: var(--color-red);
  color: var(--color-white);
  font-size: 0.8rem;
  padding: 0.6rem 1rem;
  border-radius: var(--radius-1);
  display: block;
  margin-bottom: 1rem;
}

.register,
.login,
.create-post {
  width: var(--form-width);
  margin-inline: auto;
  height: calc(100vh - 12rem);
  display: grid;
  place-items: center;
}

.register h2,
.login h2,
.create-post h2 {
  margin-bottom: 2rem;
}

.register small,
.login small {
  display: block;
  margin-top: 1.5rem;
}

.register small a,
.login small a {
  color: var(--color-tercer);
}

/*custom style for react quill*/

.ql-editor {
  overflow: scroll;
  background: var(--color-white);
  height: 10rem !important;
}
/*authors*/

.authors_container {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 2rem;
  padding-top: 5%;
}

.author {
  background: var(--color-white);
  padding: 1rem;
  border-radius: var(--radius-3);
  display: flex;
  gap: 1rem;
  transition: var(--transition);
}

.author:hover {
  box-sizing: 0 1rem 1.5rem rgba(0, 0, 0, 0.07);
}

.author_avatar {
  width: 5rem;
  aspect-ratio: 1/1;
  border-radius: 50%;
  border: 0.3rem solid var(--color-bg);
  overflow: hidden;
}

.author_info p {
  margin-top: 1rem;
}

.image_avatar {
  width: 7rem;
  border-radius: 30%;
}
/*Profile*/

.profile_container {
  display: grid;
  place-items: center;
  text-align: center;
}

.profile_details {
  width: 100%;
}

.avatar_wrapper {
  width: 10rem;
  aspect-ratio: 1/1;
  position: relative;
  margin-inline: auto;
  margin-top: 1rem;
}

.profile_avatar {
  height: 90%;
  border-radius: 50%;
  border: 1rem solid var(--color-white);
  overflow: hidden;
}

.img__user {
  width: 7rem;
  height: 100%;
  align-items: center;

}
.avatar_form {
  height: 1rem;
}

.avatar_form input {
  visibility: 1rem;
}

.avatar_form label, .profile_avatar-btn {
  background: var(--color-gray-900);
  color: var(--color-white);
  font-size: 1.2rem;
  position: absolute;
  right: 2rem;
  bottom: 1.4rem;
  width: 3rem;
  height: 3rem;
  display: grid;
  place-items: center;
  border-radius: 50%;
}

.profile_avatar-btn {
  cursor: pointer;
  padding: 0;
  font-size: 1.2rem;
  background: var(--color-tercer);
}

.profile_details h1 {
  margin-top: 1.5rem;
}

.form.profile_form {
  margin-top: 3rem;
  margin-inline: auto;
  width: var(--form-width);
}

/*Dashboard*/

.dashboard_container {
  display: flex;
  flex-direction: column;
  gap: 0.7rem;
}

.dashboard_post {
  display: flex;
  align-items: center;
  justify-content:space-between;
  gap: 1rem;
  background: var(--color-white);
  padding: 0.5rem 1.2rem;
  border-radius: var(--radius-3);
  
}

.dashboard_post-info {
  display: flex;
  gap: 2rem;
  width: 100%;
  align-items: center;
}

.dashboard_post-thumbnail {
  width: 4rem;
  border-radius: var(--radius-1);
  overflow: hidden;
}

.dashboard_post-actions {
  display: flex;
  gap: 1rem;
}

.img__dashboard{
  width: 4rem;
  border-radius: var(--radius-1);
}


/*==Media Queries (small devices===*/

@media screen and (max-width: 800px) {
  h1 {
    font-size: 2rem;
  }

  h2 {
    font-size: 1.6rem;
  }

  h3 {
    font-size: 1.35rem;
    
  }

  .container {
    width: var(--container-width-md);
  }

  /*NAVBAR*/

  .nav__container {
    position: relative;
  }

  .nav__menu {
    position: absolute;
    top: 5rem;
    right: 0;
    flex-direction: column;
    gap: 0;
  }

  .nav__menu li {
    width: 100%;
    box-shadow: -2rem 4rem 4rem rgba(0, 0, 0, 0.26);
    animation: dropDown 500ms ease forwards;
    opacity: 0;
    transform: rotatex(90deg);
    transform-origin:top;
    
  }

  @keyframes dropDown {
    to{
      opacity: 1;
      transform: rotatex(0);
    }
  }

  .nav__menu li:nth-child(2){
    animation-delay: 300ms;
  }

  .nav__menu li:nth-child(3) {
    animation-delay: 600ms;
  }

  .nav__menu li:nth-child(4) {
    animation-delay: 900ms;
  }

  .nav__menu li a {
    display: block;
    background: var(--color-white);
    padding: 0.85rem 2.5rem;
  }
  
  .nav__toggle-btn {
    display: inline-block;
    background: transparent;
    font-size: 1.5rem;
    cursor: pointer;
  }

  .posts_container {
    grid-template-columns: 1fr;
    gap: 1rem;
  }

  .footer_categories {
    flex-direction: column;
  }

  .post-detail { 
    width: 100%;
    background: transparent;
    padding: 0;

  }

  .register, .login, .create-post {
    width: 100%;
  }

  .form.profile_form {
    margin-top: 2.5rem;
    width: 100%;
  }

  .authors_container{
    grid-template-columns: 1fr;
    gap: 1.2rem;

  }

  .dashboard_post {
    flex-direction: column;
  }

  .dashboard_post-info {
    gap: 1.5rem;
  }

  .dashboard_post-thumbnail {
    width: 5rem;
  }

}

.ql-container {
  z-index: -1;
}

.create-post_form  > input {
  z-index: -1;
  
}

.create-post_form  > button {
  z-index: -1;
  
}

